@startuml cinema

entity Pelicula {
    - titulo: String
    - director: String
    - duracion: double
    - atp: boolean
}

entity Sala {
    - pelicula: List<Pelicula>
    - butacas: List<ButacaEnum>
}

enum ButacaEnum {
    - disponibilidad: boolean
    + getDisponibilidad(): boolean
    + setDisponibilidad(): void
}

entity Espectador {
    - nombre: String
    - edad: int
    - dineroDisponible: double
}

Sala "1" --> "1..*" Pelicula
Sala "1" --> "..*" ButacaEnum
Sala "1" --> "0..*" Espectador
ButacaEnum "1" --> "0..*" Espectador
Espectador "1" --> "1" ButacaEnum
Pelicula "1" --> "1..*" Sala

@enduml